Fix comment dropdown menu z-index

--- a/app/styles/layout/_feeds.scss
+++ b/app/styles/layout/_feeds.scss
@@ -323,6 +323,8 @@
   li {
     border-bottom: 1px solid #eee;
     padding: 15px 20px 8px 20px;
+    position: relative;
+    z-index: $zIndex--stream-comments;
   }
   .media-object {
     width: 35px;
